namespace Sunnyyssh.ConsoleUI;

internal sealed class FocusManager
{
     
    public FocusManager()
    {
         
    }
}